--- a/65-random-user-actions/index.html
+++ b/65-random-user-actions/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Array Methods UI</title>
+  <title>Random User Actions</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
