--- a/67-hangman/index.html
+++ b/67-hangman/index.html
@@ -7,6 +7,62 @@
   <title>Hangman</title>
 </head>
 <body>
+  <h1>Hangman</h1>
+  <p>Enter a letter to find the hidden word!</p>
+  <div class="game-container">
+    <svg height="250" width="200" class="figure-container">
+      <!-- Rod -->
+      <line x1="60" y1="20" x2="140" y2="20" />
+      <line x1="140" y1="20" x2="140" y2="50" />
+      <line x1="60" y1="20" x2="60" y2="230" />
+      <line x1="20" y1="230" x2="100" y2="230" />
+
+      <!-- Head -->
+      <circle cx="140" cy="70" r="20" class="figure-part" />
+
+      <!-- Body -->
+      <line x1="140" y1="90" x2="140" y2="150" class="figure-part" />
+
+      <!-- Arms -->
+      <line x1="140" y1="120" x2="120" y2="100" class="figure-part" />
+      <line x1="140" y1="120" x2="160" y2="100" class="figure-part" />
+
+      <!-- Legs -->
+      <line x1="140" y1="150" x2="120" y2="180" class="figure-part" />
+      <line x1="140" y1="150" x2="160" y2="180" class="figure-part" />
+
+    </svg>
+
+    <!-- Wrong letters container -->
+    <div class="wrong-letters-container">
+      <div id="wrong-letters">
+        <span>e,r,t,y</span>
+      </div>
+    </div>
+
+    <!-- Container for word to guess -->
+    <div class="word" id="word">
+      <div class="letter">h</div>
+      <div class="letter">e</div>
+      <div class="letter">l</div>
+      <div class="letter">l</div>
+      <div class="letter">o</div>
+    </div>
+  </div>
+
+  <!-- Container for final messages -->
+  <div class="popup-container" id="popup-container">
+    <div class="popup">
+      <h2 id="final-message">You Won!</h2>
+      <button id="play-btn">Play Again</button>
+    </div>
+  </div>
+
+  <!-- Notification container -->
+  <div class="notify-container" id="notify-container">
+    <p>You have already entered this letter</p>
+  </div>
+
   <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
