--- a/69-expense-tracker/index.html
+++ b/69-expense-tracker/index.html
@@ -7,6 +7,48 @@
   <title>Expense Tracker</title>
 </head>
 <body>
+  <h2>Expense Tracker</h2>
+
+  <div class="container">
+    <h4>Your Balance</h4>
+    <h1 id="balance">$0.00</h1>
+
+    <div class="inc-exp-container">
+      <div>
+        <h4>Income</h4>
+        <p id="money-plus" class="money plus">+$0.00</p>
+      </div>
+      <div>
+        <h4>Expense</h4>
+        <p id="money-minus" class="money minus">-$0.00</p>
+      </div>
+    </div>
+
+    <h3>History</h3>
+    <ul id="list" class="list">
+      <li class="minus">Coffee 
+        </span><span>-$20
+        <button class="delete-btn">x</button>
+      </li>
+    </ul>
+
+    <h3>Add New Transaction</h3>
+    <form id="form">
+      <div class="form-control">
+        <label for="text">Description</label>
+        <input type="text" id="text" placeholder="Enter description...">
+      </div>
+      <div class="form-control">
+        <label for="amount">Amount <br/>
+          <span class="neg-text">- value</span> = expense <br/>
+          <span class="pos-text">+ value</span> = income
+        </label>
+        <input type="number" id="amount" placeholder="Enter amount...">
+      </div>
+
+      <button class="btn">Add Transaction</button>
+    </form>
+  </div>
 
   <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
