--- a/69-expense-tracker/index.html
+++ b/69-expense-tracker/index.html
@@ -40,8 +40,8 @@
       </div>
       <div class="form-control">
         <label for="amount">Amount <br/>
-          <span class="neg-text">- value</span> = expense <br/>
-          <span class="pos-text">+ value</span> = income
+          <span>- value = expense</span> <br/>
+          <span>+ value = income</span>        
         </label>
         <input type="number" id="amount" placeholder="Enter amount...">
       </div>
