--- a/77-typing-game/index.html
+++ b/77-typing-game/index.html
@@ -7,6 +7,39 @@
   <title>Typing Game</title>
 </head>
 <body>
+  <button id="settings-btn" class="settings-btn">
+    <i class="fas fa-cog"></i>
+  </button>
+
+  <div id="settings" class="settings">
+    <form id="settings-form">
+      <div>
+        <label for="level">Level</label>
+        <select id="level">
+          <option value="easy">Easy</option>
+          <option value="medium">Medium</option>
+          <option value="hard">Hard</option>
+        </select>
+      </div>
+    </form>
+  </div>
+
+  <div class="container">
+    <h2>Speed Typing <i class="fa-solid fa-robot"></i></h2>
+    <small>Type the following:</small>
+
+    <h1 id="word"></h1>
+    <input type="text" id="text" autocomplete="off" placeholder="Type word here...">
+    <p class="time-container">
+      Time left: <span id="time">10s</span>
+    </p>
+
+    <p class="score-container">
+      Score: <span id="score">0</span>
+    </p>
+
+    <div id="end-game-container" class="end-game-container"></div>
+  </div>
   
   <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
