--- a/77-typing-game/index.html
+++ b/77-typing-game/index.html
@@ -25,17 +25,16 @@
   </div>
 
   <div class="container">
-    <h2>Speed Typing <i class="fa-solid fa-robot"></i></h2>
     <small>Type the following:</small>
 
     <h1 id="word"></h1>
     <input type="text" id="text" autocomplete="off" placeholder="Type word here...">
     <p class="time-container">
-      Time left: <span id="time">10s</span>
+      Time left: <span id="time" class="time">10s</span>
     </p>
 
     <p class="score-container">
-      Score: <span id="score">0</span>
+      Score: <span id="score" class="score">0</span>
     </p>
 
     <div id="end-game-container" class="end-game-container"></div>
